--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.FoodPlanner"
         tools:targetApi="31">
         <activity
-            android:name=".TestActivity"
+            android:name=".view.activities.TestActivity"
             android:exported="false" />
         <activity
             android:name=".view.activities.MainActivity"
