--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,12 @@
         android:theme="@style/Theme.FoodPlanner"
         tools:targetApi="31">
         <activity
-
+            android:name=".view.activities.HomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.activities.TestActivity"
             android:exported="false" />
         <activity
-
             android:name=".view.activities.MainActivity"
             android:exported="true">
             <intent-filter>
