--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,8 @@ dependencies {
 
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.25'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //for youtyube
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:11.1.0'
+
 }
